# gbc

./: .gitignore  CLAUDE.md  README.md  __init__.py  augment.py  causal.py  data.py  ensemble.py  iqn.py  metrics.py  multivariate.py  plotting.py  pyproject.toml  spatial.py  utils.py
data/: README.md
gbc/: __init__.py  active_learning.py  causal.py  conformal.py  iqn.py  loss.py  metrics.py  multivariate.py  plotting.py  sensitivity.py  welfare.py
scripts/: aggregate_cache.py  ch07_surrogates.py  ch08_jumps.py  ch09_active_learning.py  ch14_lake.py
tests/: test_active_learning.py  test_causal.py  test_core.py  test_ensemble.py  test_financial.py  test_jumps.py  test_multivariate.py  test_prediction.py  test_spatial.py
