[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbc"
version = "0.1.0"
description = "Generative Bayesian Computation — Python package for Polson & Sokolov (2026)"
authors = [
    {name = "Nicholas Polson"},
    {name = "Vadim Sokolov"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/VadimSokolov/gbc"

[tool.setuptools]
packages = ["gbc"]
package-dir = {"gbc" = "."}   # source files are at the repo root
